kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-auth-service
  template:
    metadata:
      labels:
        app: mongo-auth-service
    spec:
      containers:
        - name: mongo-auth-service
          image: 1t1scool/mongo-auth-service:latest
