kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-auth-service-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: mmalabugin.ru
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mongo-auth-service
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: mongo-auth-service
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: mongo-auth-service
                port:
                  number: 80
  tls:
    - hosts:
        - mmalabugin.ru
      secretName: main-page-tls
